// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array.php 1`] = `
<?php

$foo = ['foo', 'bar'];
$foo = ['foo', 'bar',];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2'];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2',];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',];
$foo = array('foo', 'bar');
$foo = array('foo', 'bar',);
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2');
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2',);
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar');
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',);
$packages = array_merge(
    idx($composer, 'require', []),
    idx($composer, 'require-dev', [])
);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

$foo = ['foo', 'bar'];
$foo = ['foo', 'bar'];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2'
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2'
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'
];
$foo = array('foo', 'bar');
$foo = array('foo', 'bar');
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2'
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2'
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'
);
$packages = array_merge(
    idx($composer, 'require', []),
    idx($composer, 'require-dev', [])
);

`;

exports[`array.php 2`] = `
<?php

$foo = ['foo', 'bar'];
$foo = ['foo', 'bar',];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2'];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2',];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar'];
$foo = ['very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',];
$foo = array('foo', 'bar');
$foo = array('foo', 'bar',);
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2');
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1', 'very-very-very-very-very-very-very-very-very-long-item-2',);
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar');
$foo = array('very-very-very-very-very-very-very-very-very-long-item-1' => 'foo', 'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',);
$packages = array_merge(
    idx($composer, 'require', []),
    idx($composer, 'require-dev', [])
);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

$foo = ['foo', 'bar'];
$foo = ['foo', 'bar'];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2',
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2',
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',
];
$foo = [
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',
];
$foo = array('foo', 'bar');
$foo = array('foo', 'bar');
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2',
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1',
    'very-very-very-very-very-very-very-very-very-long-item-2',
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',
);
$foo = array(
    'very-very-very-very-very-very-very-very-very-long-item-1' => 'foo',
    'very-very-very-very-very-very-very-very-very-long-item-2' => 'bar',
);
$packages = array_merge(
    idx($composer, 'require', []),
    idx($composer, 'require-dev', [])
);

`;

exports[`list.php 1`] = `
<?php

list($first, $second, $three, $fourth) = $arr;
list(,$first, $second, $three, $fourth,) = $arr;
list(,,$first, $second, $three, $fourth,,) = $arr;
list(,,$first,, $second,, $three,, $fourth,,) = $arr;
list(,,,$first, $second, $three, $fourth,,,) = $arr;
list(,,,$first,,, $second,,, $three,,, $fourth,,,) = $arr;

list(0 => $firstVeryVeryVeryVeryLong, 1 => $secondVeryVeryVeryVeryLong, 2 => $threeVeryVeryVeryVeryLong, 3 => $fourthVeryVeryVeryVeryLong) = $arr;
list(,0 => $firstVeryVeryVeryVeryLong, 1 => $secondVeryVeryVeryVeryLong, 2 => $threeVeryVeryVeryVeryLong, 3 => $fourthVeryVeryVeryVeryLong,) = $arr;
list(,,0 => $firstVeryVeryVeryVeryLong, 1 => $secondVeryVeryVeryVeryLong, 2 => $threeVeryVeryVeryVeryLong, 3 => $fourthVeryVeryVeryVeryLong,,) = $arr;
list(,,0 => $firstVeryVeryVeryVeryLong,, 1 => $secondVeryVeryVeryVeryLong,, 2 => $threeVeryVeryVeryVeryLong,, 3 => $fourthVeryVeryVeryVeryLong,,) = $arr;
list(,,,0 => $firstVeryVeryVeryVeryLong, 1 => $secondVeryVeryVeryVeryLong, 2 => $threeVeryVeryVeryVeryLong, 3 => $fourthVeryVeryVeryVeryLong,,,) = $arr;
list(,,,0 => $firstVeryVeryVeryVeryLong,,, 1 => $secondVeryVeryVeryVeryLong,,, 2 => $threeVeryVeryVeryVeryLong,,, 3 => $fourthVeryVeryVeryVeryLong,,,) = $arr;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

list($first, $second, $three, $fourth) = $arr;
list(, $first, $second, $three, $fourth) = $arr;
list(, , $first, $second, $three, $fourth, ,) = $arr;
list(, , $first, , $second, , $three, , $fourth, ,) = $arr;
list(, , , $first, $second, $three, $fourth, , ,) = $arr;
list(, , , $first, , , $second, , , $three, , , $fourth, , ,) = $arr;

list(
    0 => $firstVeryVeryVeryVeryLong,
    1 => $secondVeryVeryVeryVeryLong,
    2 => $threeVeryVeryVeryVeryLong,
    3 => $fourthVeryVeryVeryVeryLong
) = $arr;
list(
    ,
    0 => $firstVeryVeryVeryVeryLong,
    1 => $secondVeryVeryVeryVeryLong,
    2 => $threeVeryVeryVeryVeryLong,
    3 => $fourthVeryVeryVeryVeryLong
) = $arr;
list(
    ,
    ,
    0 => $firstVeryVeryVeryVeryLong,
    1 => $secondVeryVeryVeryVeryLong,
    2 => $threeVeryVeryVeryVeryLong,
    3 => $fourthVeryVeryVeryVeryLong,
    ,
) = $arr;
list(
    ,
    ,
    0 => $firstVeryVeryVeryVeryLong,
    ,
    1 => $secondVeryVeryVeryVeryLong,
    ,
    2 => $threeVeryVeryVeryVeryLong,
    ,
    3 => $fourthVeryVeryVeryVeryLong,
    ,
) = $arr;
list(
    ,
    ,
    ,
    0 => $firstVeryVeryVeryVeryLong,
    1 => $secondVeryVeryVeryVeryLong,
    2 => $threeVeryVeryVeryVeryLong,
    3 => $fourthVeryVeryVeryVeryLong,
    ,
    ,
) = $arr;
list(
    ,
    ,
    ,
    0 => $firstVeryVeryVeryVeryLong,
    ,
    ,
    1 => $secondVeryVeryVeryVeryLong,
    ,
    ,
    2 => $threeVeryVeryVeryVeryLong,
    ,
    ,
    3 => $fourthVeryVeryVeryVeryLong,
    ,
    ,
) = $arr;

`;

exports[`list.php 2`] = `
<?php

list($first, $second, $three, $fourth) = $arr;
list(,$first, $second, $three, $fourth,) = $arr;
list(,,$first, $second, $three, $fourth,,) = $arr;
list(,,$first,, $second,, $three,, $fourth,,) = $arr;
list(,,,$first, $second, $three, $fourth,,,) = $arr;
list(,,,$first,,, $second,,, $three,,, $fourth,,,) = $arr;

list(0 => $firstVeryVeryVeryVeryLong, 1 => $secondVeryVeryVeryVeryLong, 2 => $threeVeryVeryVeryVeryLong, 3 => $fourthVeryVeryVeryVeryLong) = $arr;
list(,0 => $firstVeryVeryVeryVeryLong, 1 => $secondVeryVeryVeryVeryLong, 2 => $threeVeryVeryVeryVeryLong, 3 => $fourthVeryVeryVeryVeryLong,) = $arr;
list(,,0 => $firstVeryVeryVeryVeryLong, 1 => $secondVeryVeryVeryVeryLong, 2 => $threeVeryVeryVeryVeryLong, 3 => $fourthVeryVeryVeryVeryLong,,) = $arr;
list(,,0 => $firstVeryVeryVeryVeryLong,, 1 => $secondVeryVeryVeryVeryLong,, 2 => $threeVeryVeryVeryVeryLong,, 3 => $fourthVeryVeryVeryVeryLong,,) = $arr;
list(,,,0 => $firstVeryVeryVeryVeryLong, 1 => $secondVeryVeryVeryVeryLong, 2 => $threeVeryVeryVeryVeryLong, 3 => $fourthVeryVeryVeryVeryLong,,,) = $arr;
list(,,,0 => $firstVeryVeryVeryVeryLong,,, 1 => $secondVeryVeryVeryVeryLong,,, 2 => $threeVeryVeryVeryVeryLong,,, 3 => $fourthVeryVeryVeryVeryLong,,,) = $arr;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php

list($first, $second, $three, $fourth) = $arr;
list(, $first, $second, $three, $fourth) = $arr;
list(, , $first, $second, $three, $fourth, ,) = $arr;
list(, , $first, , $second, , $three, , $fourth, ,) = $arr;
list(, , , $first, $second, $three, $fourth, , ,) = $arr;
list(, , , $first, , , $second, , , $three, , , $fourth, , ,) = $arr;

list(
    0 => $firstVeryVeryVeryVeryLong,
    1 => $secondVeryVeryVeryVeryLong,
    2 => $threeVeryVeryVeryVeryLong,
    3 => $fourthVeryVeryVeryVeryLong,
) = $arr;
list(
    ,
    0 => $firstVeryVeryVeryVeryLong,
    1 => $secondVeryVeryVeryVeryLong,
    2 => $threeVeryVeryVeryVeryLong,
    3 => $fourthVeryVeryVeryVeryLong,
) = $arr;
list(
    ,
    ,
    0 => $firstVeryVeryVeryVeryLong,
    1 => $secondVeryVeryVeryVeryLong,
    2 => $threeVeryVeryVeryVeryLong,
    3 => $fourthVeryVeryVeryVeryLong,
    ,
) = $arr;
list(
    ,
    ,
    0 => $firstVeryVeryVeryVeryLong,
    ,
    1 => $secondVeryVeryVeryVeryLong,
    ,
    2 => $threeVeryVeryVeryVeryLong,
    ,
    3 => $fourthVeryVeryVeryVeryLong,
    ,
) = $arr;
list(
    ,
    ,
    ,
    0 => $firstVeryVeryVeryVeryLong,
    1 => $secondVeryVeryVeryVeryLong,
    2 => $threeVeryVeryVeryVeryLong,
    3 => $fourthVeryVeryVeryVeryLong,
    ,
    ,
) = $arr;
list(
    ,
    ,
    ,
    0 => $firstVeryVeryVeryVeryLong,
    ,
    ,
    1 => $secondVeryVeryVeryVeryLong,
    ,
    ,
    2 => $threeVeryVeryVeryVeryLong,
    ,
    ,
    3 => $fourthVeryVeryVeryVeryLong,
    ,
    ,
) = $arr;

`;
